[package]
name = "radamsa"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Radamsa made available to Rust via FFI"
documentation = "https://docs.rs/radamsa"
homepage = "https://github.com/lacraig2/radamsa-rs"
repository = "https://github.com/lacraig2/radamsa-rs"
readme = "README.md"
keywords = ["fuzzing", "security", "testing", "fuzz"]
authors = ["Luke Craig <lacraig3@gmail.com>"]

exclude = [
    "radamsa/bin/*",
    "radamsa/lib/*",
]

[dependencies]
libc = "0.2.103"

[build-dependencies]
which = "4.2.2"